force-app/main/default/objects/Proposed_Plan__c.object
<CustomObject>
    <description>Proposed Plan By Employee Class for Quote And Quote Requests</description>
    <fields>
        <fullName>Class_ID__c</fullName>
        <formula>Group_Class__r.Name</formula>
        <label>Class ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Type__c</fullName>
        <formula>TEXT(Group_Class__r.Class_Type__c )</formula>
        <label>Class Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Class__c</fullName>
        <label>Group Class</label>
        <referenceTo>Group_Class__c</referenceTo>
        <relationshipLabel>Proposed Plans</relationshipLabel>
        <relationshipName>Proposed_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Installed_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installed Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Policies</relationshipLabel>
        <relationshipName>Installed_Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_Name__c</fullName>
        <formula>Marketing_Plan__r.Name</formula>
        <label>Marketing Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Plan</label>
        <referenceTo>Marketing_Plan__c</referenceTo>
        <relationshipLabel>Proposed Plans</relationshipLabel>
        <relationshipName>Proposed_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Component_Code__c</fullName>
        <formula>Marketing_Plan__r.Plan_Component_Code__c</formula>
        <label>Plan Component Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Family__c</fullName>
        <formula>Marketing_Plan__r.Plan_Family__r.Name</formula>
        <label>Plan Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <formula>Marketing_Plan__r.Plan_Name__c</formula>
        <label>Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteAccount__c</fullName>
        <description>Quote Account</description>
        <formula>Group_Class__r.Customer_Account__c</formula>
        <label>Quote Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Request</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Proposed Plans</relationshipLabel>
        <relationshipName>Proposed_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Proposed Plan</label>
    <nameField>
        <displayFormat>P-{000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposed Plans</pluralLabel>
    <recordTypes>
        <fullName>Installed_Plan</fullName>
        <active>true</active>
        <label>Installed Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Proposed_Plan</fullName>
        <active>true</active>
        <label>Proposed Plan</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>